@@ -11,7 +11,7 @@ $name = $_GET['name'];
 $vcnt = xcache_count(XC_TYPE_VAR);
 
 if ($_SERVER['REQUEST_METHOD'] == 'POST') {
-	if ($enable_eval) {
+	if (!empty($config['enable_eval'])) {
 		eval('$value = ' . $_POST['value']);
 	}
 	else {
@@ -22,7 +22,7 @@ if ($_SERVER['REQUEST_METHOD'] == 'POST') {
 	exit;
 }
 $value = xcache_get($name);
-if ($enable_eval) {
+if (!empty($enable['enable_eval'])) {
 	$value = var_export($value, true);
 	$editable = true;
 }
