@@ -1,6 +1,7 @@
 2.0.1 2012-??-??
 ========
  * improve stability
+ * admin/ config changed. please update accordingly
 
 2.0.0 2012-04-20
 ========
